--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,8 @@ name: Deploy to Azure with Terraform
 on:
   push:
     branches:
-      - main  # Runs on every push to main
-  workflow_dispatch:  # Allows manual trigger
+      - main
+  workflow_dispatch:
 
 jobs:
   terraform:
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.9.0  # Match your local version
+          terraform_version: 1.9.0
 
       - name: Azure Login
         uses: azure/login@v1
@@ -26,12 +26,16 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
+        working-directory: terraform
 
       - name: Terraform Validate
         run: terraform validate
+        working-directory: terraform
 
       - name: Terraform Plan
         run: terraform plan -out=tfplan
+        working-directory: terraform
 
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
+        working-directory: terraform
